@@ -53,6 +53,7 @@ use lib catdir($Bin, updir, 'lib');
 
 use Makefile::Update;
 use Makefile::Update::Bakefile0;
+use Makefile::Update::CMakefile;
 use Makefile::Update::Makefile;
 use Makefile::Update::MSBuild;
 use Makefile::Update::VCProj;
@@ -123,6 +124,8 @@ foreach my $fname (@ARGV) {
         upmake($options, \&update_vcproj, get_project_sources_and_headers($1));
     } elsif ($fname =~ /^[Mm]akefile/ || $fname =~ /\.make?$/) {
         upmake($options, \&update_makefile, $vars);
+    } elsif ($fname =~ /^CMakeLists\.txt$/i || $fname =~ /\.cmake$/) {
+        upmake($options, \&update_cmakefile, $vars);
     } else {
         die qq{File "$fname" is of unknown type, can't update.\n}
     }
