@@ -1,0 +1,40 @@
+use strict;
+use warnings;
+use autodie;
+use Test::More;
+
+BEGIN { use_ok('Makefile::Update::CMakefile'); }
+
+my $vars = {
+        VAR1 => [qw(file1 file2 fileNew)],
+        VAR2 => [qw(file3 file4 file5 fileNew2)],
+    };
+
+open my $out, '>', \my $outstr;
+update_cmakefile(*DATA, $out, $vars);
+
+note("Result:\n$outstr");
+
+like($outstr, qr/file1/, 'existing file was preserved');
+like($outstr, qr/fileNew$/m, 'new file was added');
+unlike($outstr, qr/fileOld/, 'old file was removed');
+like($outstr, qr/fileNew2/, 'another new file was added');
+like($outstr, qr/file3\s+file4/s, 'files remain in correct order');
+
+done_testing()
+
+__DATA__
+# Simple CMake fragment.
+
+set(VAR1
+    file1
+    # comment between the files
+    file2
+)
+
+set(VAR2
+    file3
+    file4 # comment after the file
+    file5
+    fileOld
+)
