@@ -2,6 +2,8 @@ Revision history for Perl module Makefile::Update.
 
 {{$NEXT}}
 
+  * Add support for updating variables in CMake files.
+
 0.3	2015-10-03T22:12:51Z
 
   * [Makefile] Support lists of files with different extensions (e.g. .c/.cpp).
